# assertr 2.0.0

* redesigned error and error handling mechanism

* assertr errors are now an S3 class and have some methods defined for them

* created some useful 'success' and 'error' functions

* added `chain_start` and `chain_end` that directs assertr to check all
  assertions (powering through failed ones instead of halting) and
  accumulating all the errors

* added 'is_uniq' predicate

# assertr 1.0.0

* added row reduction functions like mahalanobis distnace

* added assert_rows and insist_rows assert verbs

* bug fixes

# assertr 0.5.7

* added within_n_mads predicate generator

# assertr 0.5.5

* added support for parameterized error functions

# assertr 0.5

* improved performance by adding support for vectorized predicates
* counts number of violations instead of short circuiting

# assertr 0.4.9

* provided standard evaluation versions of assert and insist

# assertr 0.4.2

* not_na and within_bounds are now vectorized and tagged

# assertr 0.4.1

* fixed automated tests to success with R 3.0.3

# assertr 0.4

* added `insist` and `within_n_sds` functions and updated vignette and documentations

# assertr 0.2

* initial release
