@@ -15,6 +15,7 @@ export(error_logical)
 export(error_report)
 export(error_return)
 export(error_stop)
+export(has_all_names)
 export(in_set)
 export(insist)
 export(insist_)
